@@ -3,6 +3,7 @@ package uk.gov.hmcts.ccd.domain.model.definition;
 import java.util.List;
 import java.util.Optional;
 import org.hamcrest.CoreMatchers;
+import org.hamcrest.MatcherAssert;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -12,13 +13,12 @@ import uk.gov.hmcts.ccd.endpoint.exceptions.BadRequestException;
 
 import static java.lang.String.format;
 import static org.hamcrest.CoreMatchers.hasItems;
-import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.beans.HasPropertyWithValue.hasProperty;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static uk.gov.hmcts.ccd.domain.model.definition.FieldTypeDefinition.COLLECTION;
 import static uk.gov.hmcts.ccd.domain.model.definition.FieldTypeDefinition.COMPLEX;
@@ -53,34 +53,32 @@ public class CaseFieldDefinitionTest {
     private static final String ROLE2 = "role2";
     private static final String ROLE3 = "role3";
 
-    private final CaseFieldDefinition addressLine1 = newCaseField()
+    private CaseFieldDefinition addressLine1 = newCaseField()
         .withId(ADDRES_LINE_1)
         .withFieldType(aFieldType()
             .withId(TEXT_TYPE)
             .withType(TEXT_TYPE)
             .build())
         .build();
-    private final CaseFieldDefinition addressLine2 = newCaseField()
+    private CaseFieldDefinition addressLine2 = newCaseField()
         .withId(ADDRES_LINE_2)
         .withFieldType(aFieldType()
             .withId(TEXT_TYPE)
             .withType(TEXT_TYPE)
             .build())
         .build();
-    private final CaseFieldDefinition addressLine3 = newCaseField()
+    private CaseFieldDefinition addressLine3 = newCaseField()
         .withId(ADDRES_LINE_3)
         .withFieldType(aFieldType()
             .withId(TEXT_TYPE)
             .withType(TEXT_TYPE)
             .build())
         .build();
-    private final CaseFieldDefinition postcode = newCaseField().withId(POSTCODE).withFieldType(aFieldType()
-        .withId(TEXT_TYPE)
+    private CaseFieldDefinition postcode = newCaseField().withId(POSTCODE).withFieldType(aFieldType().withId(TEXT_TYPE)
         .withType(TEXT_TYPE).build()).build();
-    private final CaseFieldDefinition country = newCaseField().withId(COUNTRY).withFieldType(aFieldType()
-        .withId(TEXT_TYPE)
+    private CaseFieldDefinition country = newCaseField().withId(COUNTRY).withFieldType(aFieldType().withId(TEXT_TYPE)
         .withType(TEXT_TYPE).build()).build();
-    private final FieldTypeDefinition addressFieldTypeDefinition = aFieldType()
+    private FieldTypeDefinition addressFieldTypeDefinition = aFieldType()
         .withId(ADDRESS)
         .withType(COMPLEX)
         .withComplexField(addressLine1)
@@ -89,78 +87,74 @@ public class CaseFieldDefinitionTest {
         .withComplexField(postcode)
         .withComplexField(country)
         .build();
-    private final CaseFieldDefinition address =
+    private CaseFieldDefinition address =
         newCaseField().withId(ADDRESS).withFieldType(addressFieldTypeDefinition).build();
 
-    private final CaseFieldDefinition name =
+    private CaseFieldDefinition name =
         newCaseField().withId(NAME).withFieldType(aFieldType().withId(TEXT_TYPE).withType(TEXT_TYPE).build()).build();
-    private final CaseFieldDefinition surname = newCaseField().withId(SURNAME).withFieldType(aFieldType()
-        .withId(TEXT_TYPE)
+    private CaseFieldDefinition surname = newCaseField().withId(SURNAME).withFieldType(aFieldType().withId(TEXT_TYPE)
         .withType(TEXT_TYPE).build()).build();
-    private final FieldTypeDefinition personFieldTypeDefinition = aFieldType()
+    private FieldTypeDefinition personFieldTypeDefinition = aFieldType()
         .withId(PERSON)
         .withType(COMPLEX)
         .withComplexField(name)
         .withComplexField(surname)
         .withComplexField(address)
         .build();
-    private final CaseFieldDefinition person = newCaseField().withId(PERSON)
-        .withFieldType(personFieldTypeDefinition).build();
+    private CaseFieldDefinition person = newCaseField().withId(PERSON).withFieldType(personFieldTypeDefinition).build();
 
-    private final FieldTypeDefinition debtorFieldTypeDefinition =
+    private FieldTypeDefinition debtorFieldTypeDefinition =
         aFieldType().withId(DEBTOR_DETAILS).withType(COMPLEX).withComplexField(person).build();
-    private final CaseFieldDefinition debtorDetails =
+    private CaseFieldDefinition debtorDetails =
         newCaseField().withId(DEBTOR_DETAILS).withFieldType(debtorFieldTypeDefinition).build();
 
-    private final FieldTypeDefinition membersFieldTypeDefinition = aFieldType()
+    private FieldTypeDefinition membersFieldTypeDefinition = aFieldType()
         .withId(MEMBERS + "-some-uid-value")
         .withType(COLLECTION)
         .withCollectionField(person)
         .build();
-    private final CaseFieldDefinition members =
+    private CaseFieldDefinition members =
         newCaseField().withId(MEMBERS).withFieldType(membersFieldTypeDefinition).build();
 
-    private final CaseFieldDefinition familyName = newCaseField()
+    private CaseFieldDefinition familyName = newCaseField()
         .withId(FAMILY_NAME)
         .withFieldType(aFieldType()
             .withId(TEXT_TYPE)
             .withType(TEXT_TYPE)
             .build())
         .build();
-    private final FieldTypeDefinition familyNamesFieldTypeDefinition =
+    private FieldTypeDefinition familyNamesFieldTypeDefinition =
         aFieldType().withId(FAMILY_NAMES).withType(COLLECTION).withCollectionField(familyName).build();
-    private final CaseFieldDefinition familyNames =
+    private CaseFieldDefinition familyNames =
         newCaseField().withId(FAMILY_NAMES).withFieldType(familyNamesFieldTypeDefinition).build();
 
 
-    private final CaseFieldDefinition addressLine21 = newCaseField()
+    private CaseFieldDefinition addressLine21 = newCaseField()
         .withId(ADDRES_LINE_1)
         .withFieldType(aFieldType()
             .withId(TEXT_TYPE)
             .withType(TEXT_TYPE)
             .build())
         .build();
-    private final CaseFieldDefinition addressLine22 = newCaseField()
+    private CaseFieldDefinition addressLine22 = newCaseField()
         .withId(ADDRES_LINE_2)
         .withFieldType(aFieldType()
             .withId(TEXT_TYPE)
             .withType(TEXT_TYPE)
             .build())
         .build();
-    private final CaseFieldDefinition addressLine23 = newCaseField()
+    private CaseFieldDefinition addressLine23 = newCaseField()
         .withId(ADDRES_LINE_3)
         .withFieldType(aFieldType()
             .withId(TEXT_TYPE)
             .withType(TEXT_TYPE)
             .build())
         .build();
-    private final CaseFieldDefinition postcode2 = newCaseField().withId(POSTCODE)
-        .withFieldType(aFieldType().withId(TEXT_TYPE)
+    private CaseFieldDefinition postcode2 = newCaseField().withId(POSTCODE).withFieldType(aFieldType().withId(TEXT_TYPE)
         .withType(TEXT_TYPE).build()).build();
-    private final CaseFieldDefinition country2 = newCaseField().withId(COUNTRY)
-        .withFieldType(aFieldType().withId(TEXT_TYPE)
+    private CaseFieldDefinition country2 = newCaseField().withId(COUNTRY).withFieldType(aFieldType().withId(TEXT_TYPE)
         .withType(TEXT_TYPE).build()).build();
-    private final FieldTypeDefinition addressFieldTypeDefinition2 = aFieldType()
+    private FieldTypeDefinition addressFieldTypeDefinition2 = aFieldType()
         .withId(ADDRESS)
         .withType(COMPLEX)
         .withComplexField(addressLine21)
@@ -169,37 +163,36 @@ public class CaseFieldDefinitionTest {
         .withComplexField(postcode2)
         .withComplexField(country2)
         .build();
-    private final CaseFieldDefinition familyAddress =
+    private CaseFieldDefinition familyAddress =
         newCaseField().withId(FAMILY_ADDRESS).withFieldType(addressFieldTypeDefinition2).build();
-    private final FieldTypeDefinition familyInfoType = aFieldType().withId(FAMILY_INFO)
+    private FieldTypeDefinition familyInfoType = aFieldType().withId(FAMILY_INFO)
         .withType(COMPLEX)
         .withComplexField(familyNames)
         .withComplexField(familyAddress)
         .build();
-    private final CaseFieldDefinition familyInfo = newCaseField().withId(FAMILY_INFO)
-        .withFieldType(familyInfoType).build();
+    private CaseFieldDefinition familyInfo = newCaseField().withId(FAMILY_INFO).withFieldType(familyInfoType).build();
 
-    private final FieldTypeDefinition familyFieldTypeDefinition =
+    private FieldTypeDefinition familyFieldTypeDefinition =
         aFieldType().withId(FAMILY).withType(COMPLEX).withComplexField(familyInfo).withComplexField(members).build();
-    private final AccessControlList acl1 =
+    private AccessControlList acl1 =
         anAcl().withRole(ROLE1).withCreate(true).withRead(true).withUpdate(true).withDelete(false).build();
-    private final AccessControlList acl2 =
+    private AccessControlList acl2 =
         anAcl().withRole(ROLE2).withCreate(true).withRead(true).withUpdate(false).withDelete(true).build();
-    private final AccessControlList acl3 =
+    private AccessControlList acl3 =
         anAcl().withRole(ROLE3).withCreate(false).withRead(false).withUpdate(true).withDelete(false).build();
-    private final ComplexACL complexACL1
+    private ComplexACL complexACL1
         = aComplexACL().withListElementCode(MEMBERS).withRole(ROLE1).withCreate(false).withRead(true).withUpdate(true)
         .withDelete(false).build();
-    private final ComplexACL complexACL2
+    private ComplexACL complexACL2
         = aComplexACL().withListElementCode(MEMBERS + "." + PERSON).withRole(ROLE1).withCreate(false).withRead(true)
         .withUpdate(false).withDelete(false).build();
-    private final ComplexACL complexACL3
+    private ComplexACL complexACL3
         = aComplexACL().withListElementCode(MEMBERS + "." + PERSON + "." + NAME).withRole(ROLE1).withCreate(false)
         .withRead(true).withUpdate(false).withDelete(false).build();
-    private final ComplexACL complexACL4
+    private ComplexACL complexACL4
         = aComplexACL().withListElementCode(FAMILY_INFO).withRole(ROLE1).withCreate(true).withRead(true)
         .withUpdate(true).withDelete(false).build();
-    private final ComplexACL complexACL5
+    private ComplexACL complexACL5
         = aComplexACL().withListElementCode(FAMILY_INFO + "." + FAMILY_ADDRESS).withRole(ROLE1).withCreate(true)
         .withRead(true).withUpdate(false).withDelete(false).build();
     private CaseFieldDefinition family;
@@ -340,47 +333,6 @@ public class CaseFieldDefinitionTest {
             assertEquals("CaseViewField " + DEBTOR_DETAILS + " has no nested elements with code Field2.Field3.",
                 exception.getMessage());
         }
-
-        @Test
-        void getSubfieldDefinition_shouldReturnSubfieldDefinition() {
-            Optional<CaseFieldDefinition> result = debtorDetails.getSubfieldDefinition(PERSON);
-
-            assertAll(
-                () -> assertThat(result.isPresent(), is(true)),
-                () -> assertThat(result.get().getId(), is(PERSON)),
-                () -> assertThat(result.get(), is(person))
-            );
-        }
-
-        @Test
-        void getSubfieldDefinition_shouldReturnSubfieldDefinitionForCollection() {
-            Optional<CaseFieldDefinition> result = members.getSubfieldDefinition(PERSON);
-
-            assertAll(
-                () -> assertThat(result.isPresent(), is(true)),
-                () -> assertThat(result.get().getId(), is(PERSON)),
-                () -> assertThat(result.get(), is(person))
-            );
-        }
-
-        @Test
-        void getSubfieldDefinition_shouldReturnEmptyOptionalWhenCollectionFieldIsNotPresent() {
-            Optional<CaseFieldDefinition> result = members.getSubfieldDefinition("NonExistingCollectionField");
-            assertFalse(result.isPresent());
-        }
-
-        @Test
-        void getSubfieldDefinition_shouldReturnEmptyOptionalForNonExistingField() {
-            Optional<CaseFieldDefinition> result = debtorDetails.getSubfieldDefinition("NonExistingField");
-            assertFalse(result.isPresent());
-        }
-
-        @Test
-        void getSubfieldDefinition_shouldReturnEmptyOptionalWhenFieldTypeIsNull() {
-            CaseFieldDefinition caseField = new CaseFieldDefinition();
-            Optional<CaseFieldDefinition> result = caseField.getSubfieldDefinition("anyField");
-            assertFalse(result.isPresent());
-        }
     }
 
     @Nested
@@ -393,7 +345,7 @@ public class CaseFieldDefinitionTest {
 
             DisplayContext result = name.displayContextType();
 
-            assertThat(result, is(DisplayContext.READONLY));
+            MatcherAssert.assertThat(result, is(DisplayContext.READONLY));
         }
 
         @Test
@@ -402,7 +354,7 @@ public class CaseFieldDefinitionTest {
 
             DisplayContext result = name.displayContextType();
 
-            assertThat(result, is(DisplayContext.MANDATORY));
+            MatcherAssert.assertThat(result, is(DisplayContext.MANDATORY));
         }
 
         @Test
@@ -411,7 +363,7 @@ public class CaseFieldDefinitionTest {
 
             DisplayContext result = name.displayContextType();
 
-            assertThat(result, is(DisplayContext.OPTIONAL));
+            MatcherAssert.assertThat(result, is(DisplayContext.OPTIONAL));
         }
 
         @Test
@@ -436,8 +388,8 @@ public class CaseFieldDefinitionTest {
 
             assertAll(
                 () -> assertThat(result.size(), is(1)),
-                () -> assertThat(result.getFirst().getType(), is(DisplayContextParameterType.DATETIMEENTRY)),
-                () -> assertThat(result.getFirst().getValue(), is("ddMMyy"))
+                () -> assertThat(result.get(0).getType(), is(DisplayContextParameterType.DATETIMEENTRY)),
+                () -> assertThat(result.get(0).getValue(), is("ddMMyy"))
             );
         }
 
@@ -449,8 +401,8 @@ public class CaseFieldDefinitionTest {
 
             assertAll(
                 () -> assertThat(result.size(), is(2)),
-                () -> assertThat(result.getFirst().getType(), is(DisplayContextParameterType.DATETIMEENTRY)),
-                () -> assertThat(result.getFirst().getValue(), is("ddMMyy")),
+                () -> assertThat(result.get(0).getType(), is(DisplayContextParameterType.DATETIMEENTRY)),
+                () -> assertThat(result.get(0).getValue(), is("ddMMyy")),
                 () -> assertThat(result.get(1).getType(), is(DisplayContextParameterType.DATETIMEDISPLAY)),
                 () -> assertThat(result.get(1).getValue(), is("yyyy"))
             );
@@ -464,8 +416,8 @@ public class CaseFieldDefinitionTest {
 
             assertAll(
                 () -> assertThat(result.size(), is(1)),
-                () -> assertThat(result.getFirst().getType(), is(DisplayContextParameterType.DATETIMEDISPLAY)),
-                () -> assertThat(result.getFirst().getValue(), is("yyyy"))
+                () -> assertThat(result.get(0).getType(), is(DisplayContextParameterType.DATETIMEDISPLAY)),
+                () -> assertThat(result.get(0).getValue(), is("yyyy"))
             );
         }
 
@@ -477,8 +429,8 @@ public class CaseFieldDefinitionTest {
 
             assertAll(
                 () -> assertThat(result.size(), is(1)),
-                () -> assertThat(result.getFirst().getType(), is(DisplayContextParameterType.DATETIMEDISPLAY)),
-                () -> assertThat(result.getFirst().getValue(), is("yyyy"))
+                () -> assertThat(result.get(0).getType(), is(DisplayContextParameterType.DATETIMEDISPLAY)),
+                () -> assertThat(result.get(0).getValue(), is("yyyy"))
             );
         }
 
